Add plot_util and summary into dm class

--- a/sim/comparison.ipynb
+++ b/sim/comparison.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = DecisionEnvironment(N=12)"
+    "env = DecisionEnvironment(N=12, num_trials=100)"
    ]
   },
   {
@@ -38,16 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dm = DecisionMaker()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dm.decide(env)"
+    "dm = DecisionMaker(env)\n",
+    "dm.decide()"
    ]
   },
   {
@@ -65,17 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
-    "\n",
-    "to_plot = dm.data.reset_index().drop(columns=\"num_eval\")\n",
-    "\n",
-    "ax = sns.relplot(\n",
-    "    data=to_plot.melt(id_vars=\"index\", var_name=\"type\", value_name=\"util\"),\n",
-    "    x=\"index\",\n",
-    "    y=\"util\",\n",
-    "    hue=\"type\",\n",
-    "    kind=\"line\",\n",
-    ")"
+    "dm.plot_util()"
    ]
   },
   {
@@ -84,57 +66,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_plot.mean()"
+    "print(dm.summary())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
