create separate decision making agents with abc, plot util to functions

--- a/sim/comparison.ipynb
+++ b/sim/comparison.ipynb
@@ -16,11 +16,29 @@
    "outputs": [],
    "source": [
     "%autoreload\n",
+    "from environment import DecisionEnvironment, DecisionEnvironmentGrid\n",
     "\n",
-    "import numpy as np\n",
+    "env = DecisionEnvironment(N=12, \n",
+    "                          k_values=[1, 2, 3, 4, 5, 6, 7],\n",
+    "                          num_trials=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%autoreload\n",
+    "from decision_maker import FixedDecisionMaker, DynamicDecisionMaker\n",
     "\n",
-    "from environment import DecisionEnvironment\n",
-    "from decision_maker import DecisionMaker"
+    "ddm = DynamicDecisionMaker(env)\n",
+    "K1 = FixedDecisionMaker(env, 1)\n",
+    "K2 = FixedDecisionMaker(env, 2)\n",
+    "K3 = FixedDecisionMaker(env, 3)\n",
+    "K5 = FixedDecisionMaker(env, 5)\n",
+    "\n",
+    "agents = [ddm, K1, K2, K3, K5]\n"
    ]
   },
   {
@@ -29,7 +47,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = DecisionEnvironment(N=12, num_trials=1000)"
+    "%autoreload\n",
+    "\n",
+    "for agent in agents:\n",
+    "    agent.decide()"
    ]
   },
   {
@@ -38,8 +59,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dm = DecisionMaker(env)\n",
-    "dm.decide()"
+    "%autoreload\n",
+    "\n",
+    "from visualize import plot_agent_data\n",
+    "\n",
+    "plot_agent_data([ddm, K1])\n",
+    "plot_agent_data([ddm, K2])\n",
+    "plot_agent_data([ddm, K3])\n",
+    "plot_agent_data([ddm, K5])\n",
+    "plot_agent_data([K1, K2, K3, K5])"
    ]
   },
   {
@@ -48,7 +76,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dm.plot_util()"
+    "%autoreload\n",
+    "\n",
+    "from visualize import plot_vhat_index_comparison\n",
+    "\n",
+    "plot_vhat_index_comparison(ddm, K2)\n",
+    "plot_vhat_index_comparison(ddm, K3)\n",
+    "plot_vhat_index_comparison(ddm, K5)"
    ]
   },
   {
@@ -57,16 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dm.summary(table=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dm.plot_num_eval_index()"
+    "dm.plot_num_eval_index(limit=100)"
    ]
   },
   {
@@ -93,14 +118,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# as a function of N - remember to adjust k_values too\n",
-    "\n",
-    "# as a function of sigma\n",
-    "\n",
-    "# as a function of tau\n",
-    "\n",
-    "# as a function of cost_eval (decision maker)"
+    "# TODO as a function of cost_eval (decision maker)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "index_from_end = dm.data[\"num_eval\"] - dm.data[\"dynamic_index_Vhat\"]\n",
+    "plt.hist(index_from_end, bins=range(1,int(max(index_from_end))))\n",
+    "plt.show()\n",
+    "\n",
+    "plt.hist(dm.data[\"num_eval\"])\n",
+    "plt.show()\n",
+    "\n",
+    "plt.hist(dm.data[\"dynamic_index_Vhat\"])\n",
+    "plt.show()\n",
+    "\n",
+    "# the fact that there are so many 1s here\n",
+    "# is in part a function of only evaluating 1 action frequently\n",
+    "# - the K1 agent only chooses the last action they evaluate\n",
+    "# so maybe just remove instances where num_eval is 1?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
