fix bug fixed-k data, make plotting distribution comparison flexible v/vhat, delete vestigial k_values

--- a/sim/comparison.ipynb
+++ b/sim/comparison.ipynb
@@ -19,8 +19,7 @@
     "from environment import DecisionEnvironment, DecisionEnvironmentGrid\n",
     "\n",
     "env = DecisionEnvironment(N=12, \n",
-    "                          k_values=[1, 2, 3, 4, 5, 6, 7],\n",
-    "                          num_trials=1000)"
+    "                          num_trials=2000)"
    ]
   },
   {
@@ -78,11 +77,11 @@
    "source": [
     "%autoreload\n",
     "\n",
-    "from visualize import plot_vhat_index_comparison\n",
+    "from visualize import plot_distribution_comparison\n",
     "\n",
-    "plot_vhat_index_comparison(ddm, K2)\n",
-    "plot_vhat_index_comparison(ddm, K3)\n",
-    "plot_vhat_index_comparison(ddm, K5)"
+    "plot_distribution_comparison(ddm, K2, \"Vhat_index\")\n",
+    "plot_distribution_comparison(ddm, K3, \"Vhat_index\")\n",
+    "plot_distribution_comparison(ddm, K5, \"Vhat_index\")"
    ]
   },
   {
@@ -91,7 +90,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dm.plot_num_eval_index(limit=100)"
+    "%autoreload\n",
+    "\n",
+    "from visualize import plot_distribution_comparison\n",
+    "\n",
+    "plot_distribution_comparison(ddm, K2, \"V_index\")\n",
+    "plot_distribution_comparison(ddm, K3, \"V_index\")\n",
+    "plot_distribution_comparison(ddm, K5, \"V_index\")"
    ]
   },
   {
@@ -128,14 +133,8 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "index_from_end = dm.data[\"num_eval\"] - dm.data[\"dynamic_index_Vhat\"]\n",
-    "plt.hist(index_from_end, bins=range(1,int(max(index_from_end))))\n",
-    "plt.show()\n",
     "\n",
-    "plt.hist(dm.data[\"num_eval\"])\n",
-    "plt.show()\n",
-    "\n",
-    "plt.hist(dm.data[\"dynamic_index_Vhat\"])\n",
+    "plt.hist(ddm.data[\"Vhat_index\"])\n",
     "plt.show()\n",
     "\n",
     "# the fact that there are so many 1s here\n",
