add utility_second best and plot, add gross_utility_last_eval

--- a/sim/comparison.ipynb
+++ b/sim/comparison.ipynb
@@ -19,7 +19,7 @@
     "from environment import DecisionEnvironment, DecisionEnvironmentGrid\n",
     "\n",
     "env = DecisionEnvironment(N=12, \n",
-    "                          num_trials=5000)"
+    "                          num_trials=100)"
    ]
   },
   {
@@ -105,7 +105,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env.plot_action_values()"
+    "%autoreload\n",
+    "\n",
+    "from visualize import plot_advantage_over_second_best\n",
+    "\n",
+    "plot_advantage_over_second_best(ddm, K2)\n",
+    "plot_advantage_over_second_best(ddm, K3)\n",
+    "plot_advantage_over_second_best(ddm, K5)"
    ]
   },
   {
@@ -114,7 +120,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env.plot_vhats()"
+    "%autoreload\n",
+    "\n",
+    "from visualize import plot_advantage_over_second_best\n",
+    "\n",
+    "plot_advantage_over_second_best(ddm, K2, dynamic_index_only=True)\n",
+    "plot_advantage_over_second_best(ddm, K3, dynamic_index_only=True)\n",
+    "plot_advantage_over_second_best(ddm, K5, dynamic_index_only=True)"
    ]
   },
   {
@@ -123,7 +135,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO as a function of cost_eval (decision maker)"
+    "# TODO performance of different agents\n",
+    "# as a function of cost_eval (decision maker grid)"
    ]
   },
   {
