vb as a function of last vs not last option considered, s2 value

--- a/sim/experiment/experiment-data.ipynb
+++ b/sim/experiment/experiment-data.ipynb
@@ -36,24 +36,90 @@
    "outputs": [],
    "source": [
     "# (a) what condition the participant was in (cond = 1 is gains)\n",
-    "\n",
-    "# (b) what the stage 1 value of each word was (\"s1_value\")\n",
-    "# (c) whether it was in a person's choice set (\"in.cs\")\n",
-    "# (d) the reported order in which the words came to mind (\"order\", lower numbers mean they came to mind earlier).\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# filter on cond=1 only\n",
-    "# sort months by s1 value, which is equivalent to the \"context-free value\"\n",
-    "# grouping by the number of options evaluated K (for each), visualize index in list according to s1 value (context-free) of action ultimately chosen\n",
+    "data = df.loc[df[\"cond\"]==1, [\"subject\", \"word\", \"s2_value\", \"in.cs\", \"order\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# whether evaluated another option as a function of best so far"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create num_eval column\n",
+    "num_eval = data[data[\"in.cs\"] == True].groupby(\"subject\").count()[\"word\"].rename(\"num_eval\")\n",
+    "data = data.merge(num_eval, right_on=\"subject\", left_on=\"subject\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop non-evaluated entries\n",
+    "data = data[data[\"in.cs\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create best option evaluated so far column\n",
+    "data[\"highest_value_so_far\"] = data.sort_values([\"subject\", \"order\"]).groupby(\"subject\")[\"s2_value\"].cummax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create column whether that was their last one\n",
+    "data[\"did_continue_eval\"] = ~(data[\"order\"] == data[\"num_eval\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Summary stats\n",
+    "data.groupby(\"did_continue_eval\")[\"highest_value_so_far\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the whole distribution\n",
+    "minimum = min(data.groupby(\"word\")[\"s2_value\"].mean())\n",
+    "maximim = max(data.groupby(\"word\")[\"s2_value\"].mean())\n",
+    "non_last_eval = data.loc[data[\"did_continue_eval\"], \"highest_value_so_far\"]\n",
+    "last_eval = data.loc[~data[\"did_continue_eval\"], \"highest_value_so_far\"]\n",
     "\n",
-    "# Adam has actually made this super easy - I just get s1_value_rank where chosen=1 and also get num_eval"
+    "bins = np.linspace(minimum, maximim, 10)\n",
+    "\n",
+    "plt.hist(non_last_eval, bins, alpha=0.5, label='continued evaluating', weights=np.ones(len(non_last_eval)) / len(non_last_eval))\n",
+    "plt.hist(last_eval, bins, alpha=0.5, label='stopped', weights=np.ones(len(last_eval)) / len(last_eval))\n",
+    "plt.legend(loc='upper left')\n",
+    "plt.xlabel(\"Value of best action so far\")\n",
+    "plt.ylabel(\"Percentage of situations\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -62,7 +128,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# :: Rank According to Vhat of the Action Chosen"
+    "bins = np.linspace(minimum, maximim, 10)\n",
+    "plt.hist(data.groupby(\"word\")[\"s2_value\"].mean(), bins)\n",
+    "plt.title(\"Distribution across 12 months\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -71,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = df.loc[df[\"cond\"]==1, [\"subject\", \"word\", \"s1_value\", \"s2_value\", \"in.cs\", \"order\", \"chosen\"]]"
+    "data.groupby(\"word\")[\"s2_value\"].mean()"
    ]
   },
   {
@@ -92,8 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_eval = data[data[\"in.cs\"] == True].groupby(\"subject\").count()[\"chosen\"].rename(\"num_eval\")\n",
-    "data = data.merge(num_eval, right_on=\"subject\", left_on=\"subject\")"
+    "### OLD BELOW"
    ]
   },
   {
@@ -126,10 +194,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create num_eval column\n",
-    "num_eval = data.groupby(\"assignmentId\").agg({\"in.cs\": \"sum\"}).rename(columns={\"in.cs\": \"num_eval\"})\n",
-    "data = data.merge(num_eval, how=\"left\", on=\"assignmentId\")"
+    "# Some descriptive parts"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Distribution over rank according to "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -139,6 +235,13 @@
    "source": [
     "### OLD stuff below"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
