filter by same order on vb across options continued vs stopped

--- a/sim/experiment/experiment-data.ipynb
+++ b/sim/experiment/experiment-data.ipynb
@@ -149,11 +149,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_subjects = len(data[\"subject\"].unique())\n",
-    "data = data.sort_values(by=[\"subject\", \"s1_value\"], ascending=False)\n",
-    "data = data[data[\"in.cs\"] == True]\n",
-    "data[\"s1_order\"] = data.groupby(\"subject\").cumcount()"
+    "order_filter = 2\n",
+    "# get the whole distribution for the same number of eval'd options\n",
+    "\n",
+    "filtered_data = data[data[\"order\"]==order_filter]\n",
+    "minimum = min(filtered_data.groupby(\"word\")[\"s2_value\"].mean())\n",
+    "maximim = max(filtered_data.groupby(\"word\")[\"s2_value\"].mean())\n",
+    "non_last_eval = filtered_data.loc[filtered_data[\"did_continue_eval\"], \"highest_value_so_far\"]\n",
+    "last_eval = filtered_data.loc[~filtered_data[\"did_continue_eval\"], \"highest_value_so_far\"]\n",
+    "\n",
+    "bins = np.linspace(minimum, maximim, 10)\n",
+    "\n",
+    "plt.hist(non_last_eval, bins, alpha=0.5, label='continued evaluating', weights=np.ones(len(non_last_eval)) / len(non_last_eval))\n",
+    "plt.hist(last_eval, bins, alpha=0.5, label='stopped', weights=np.ones(len(last_eval)) / len(last_eval))\n",
+    "plt.legend(loc='upper left')\n",
+    "plt.xlabel(\"Value of best action so far\")\n",
+    "plt.ylabel(\"Percentage of situations\")\n",
+    "plt.title(f\"Order={order_filter}\")\n",
+    "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
